<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="game"
            type="edu.sdsmt.hcats_lamoreaux_landon.Game"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="@string/herding_cats"
        tools:context=".MainActivity">

        <edu.sdsmt.hcats_lamoreaux_landon.GameView
            android:id="@+id/GridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/treatBtn"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginBottom="16dp"
            android:onClick="onTreat"
            android:text="@string/treat"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.33"/>

        <Button
            android:id="@+id/downBtn"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="33"
            android:onClick="onDown"
            android:text="@string/down"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintWidth_percent="0.33"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rightBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/treatBtn" />

        <Button
            android:id="@+id/rightBtn"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="33"
            android:onClick="onRight"
            android:text="@string/right"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/downBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.33"
            tools:layout_editor_absoluteX="275dp" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:onClick="onReset"
            android:text="@string/reset"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fab" />

        <TextView
            android:id="@+id/caughtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/CaughtLabel"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movesLabel" />

        <TextView
            android:id="@+id/movesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/movesLabel"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/treatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/treatLabel"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caughtLabel" />

        <TextView
            android:id="@+id/treats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treats"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/treatLabel"
            app:layout_constraintTop_toBottomOf="@+id/caught" />

        <TextView
            android:id="@+id/caught"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/caught"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/caughtLabel"
            app:layout_constraintTop_toTopOf="@+id/moves" />

        <TextView
            android:id="@+id/moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/Empty"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/movesLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:contentDescription="@string/settings"
            app:backgroundTint="#00B0FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="36dp"
            app:srcCompat="@android:drawable/ic_menu_preferences"
            app:tint="#651FFF"
            app:useCompatPadding="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>